update styling across app, fix spacing issue in About

--- a/src/styles/About.scss
+++ b/src/styles/About.scss
@@ -4,7 +4,7 @@
 .container-about {
   width: 100%;
   height: 200vh;
-  max-height: 1000px;
+  max-height: 1050px;
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -25,7 +25,7 @@
     }
   }
   .container-timelines {
-    height: 45%;
+    height: 50%;
     width: 100%;
     display: flex;
     justify-content: space-around;
