--- a/src/styles/ProjectView.scss
+++ b/src/styles/ProjectView.scss
@@ -1,70 +1,72 @@
 @import './colors';
-.container-single-project-view{
+.container-single-project-view {
+  width: 90%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background: $top-gradient;
+  background: linear-gradient(0deg, $top-gradient, $bottom-gradiant);
+  margin-top: 2px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  .container-view-about {
     width: 90%;
-    height: 100%;
+    height: 35%;
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
-    background: $top-gradient;
-    background: linear-gradient(0deg, $top-gradient, $bottom-gradiant);
-    margin-top: 2px;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-    .container-view-about{
-        width: 90%;
-        height: 35%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        font-weight: 600;
-        font-size: 1.15rem;
-    }
-    .container-view-technology{
-        width: 95%;
-        height: 90%;
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-    }
+    text-align: center;
+    font-weight: 600;
+    font-size: 1.15rem;
+  }
+  .container-view-technology {
+    width: 95%;
+    height: 90%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
 }
 
-@media (min-width: 576px) { 
-    .container-single-project-view{
-        width: 80%;
-        height: 100%;
-        .container-view-about{
-            width: 85%;
-            height: 45%;
-            font-size: 1.25rem;
-        }
-        .container-view-technology{
-            width: 85%;
-            height: 50%;
-            grid-template-columns: repeat(3, 1fr);
-        }
+@media (min-width: 576px) {
+  .container-single-project-view {
+    width: 75%;
+    height: 100%;
+    .container-view-about {
+      width: 85%;
+      height: 45%;
+      font-size: 1.25rem;
     }
+    .container-view-technology {
+      width: 85%;
+      height: 50%;
+      grid-template-columns: repeat(3, 1fr);
+    }
+  }
 }
 
-@media (min-width: 768px) { 
-    .container-single-project-view{
-        width: 75%;
-        max-width: 600px;
-        height: 100%;
-        .container-view-about{
-            width: 85%;
-            height: 45%;
-            font-size: 1.5rem;
-        }
-        .container-view-technology{
-            width: 85%;
-            height: 50%;
-            grid-template-columns: repeat(3, 1fr);
-        }
+@media (min-width: 768px) {
+  .container-single-project-view {
+    width: 75%;
+    max-width: 600px;
+    height: 100%;
+    .container-view-about {
+      width: 85%;
+      height: 45%;
+      font-size: 1.5rem;
     }
+    .container-view-technology {
+      width: 85%;
+      height: 50%;
+      grid-template-columns: repeat(3, 1fr);
+    }
+  }
 }
 
-@media (min-width: 992px) { }
+@media (min-width: 992px) {
+}
 
-@media (min-width: 1200px) { }
+@media (min-width: 1200px) {
+}
