--- a/src/styles/Skill.scss
+++ b/src/styles/Skill.scss
@@ -1,32 +1,29 @@
-.container-skill{
-    width: 100%;
-    height: 100%;
-    font-size: 1.2rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    &.active{
-        transform: rotate(75deg);
-    }
+.container-skill {
+  width: 100%;
+  height: 100%;
+  font-size: 1.2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  &.active {
+    transform: rotate(90deg);
+    font-size: 1rem;
+  }
 }
-
 
 @media (min-width: 768px) {
-    .container-skill{
-        max-width: 100%;
-        max-height: auto;
-    }
-    
+  .container-skill {
+    max-width: 100%;
+    max-height: auto;
+  }
 }
 @media (min-width: 992px) {
-    .container-skill{
-        font-size: 1.25rem;
-    }
-    
+  .container-skill {
+    font-size: 1.25rem;
+  }
 }
 @media (min-width: 992px) {
-    .container-skill{
-        font-size: 1.5rem;
-    }
-    
+  .container-skill {
+    font-size: 1.5rem;
+  }
 }
